--- a/.github/workflows/metrics_update.yml
+++ b/.github/workflows/metrics_update.yml
@@ -40,6 +40,8 @@ jobs:
           plugin_wakatime_url: https://waka.doda.dev
           plugin_wakatime_sections: time, languages, languages-graphs, editors, os
           plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
+          plugin_wakatime_days: 7
+          plugin_wakatime_limit: 4
           plugin_wakatime_user: doda
           output_action: pull-request
           delay: 120
