--- a/.github/workflows/branch_delete.yml
+++ b/.github/workflows/branch_delete.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           repo_token: ${{ github.token }}
           date: '3 days ago'
-          dry_run: true
+          dry_run: false
           delete_tags: true
           minimum_tags: 5
           extra_protected_branch_regex: ^(foo|bar)$
